# presto

./: .gitmodules
presto-native-execution/: Makefile
presto-native-execution/presto_cpp/main/: CMakeLists.txt  PrestoServer.cpp  TaskManager.cpp
presto-native-execution/presto_cpp/main/connectors/: CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/arrow_flight/: ArrowFlightConnector.cpp  ArrowFlightConnector.h  CMakeLists.txt  FlightConfig.cpp  FlightConfig.h  Macros.h
presto-native-execution/presto_cpp/main/connectors/arrow_flight/auth/: Authenticator.cpp  Authenticator.h  CMakeLists.txt
presto-native-execution/presto_cpp/main/connectors/arrow_flight/tests/: ArrowFlightConnectorDataTypeTest.cpp  ArrowFlightConnectorTest.cpp  ArrowFlightConnectorTlsTest.cpp  CMakeLists.txt  FlightConfigTest.cpp  StaticFlightServerTest.cpp
presto-native-execution/presto_cpp/main/connectors/arrow_flight/tests/utils/: CMakeLists.txt  FlightConnectorTestBase.cpp  FlightConnectorTestBase.h  FlightPlanBuilder.cpp  FlightPlanBuilder.h  StaticFlightServer.cpp  StaticFlightServer.h  Utils.cpp  Utils.h
presto-native-execution/presto_cpp/main/types/: PrestoToVeloxConnector.cpp
presto-native-execution/presto_cpp/main/types/tests/: CMakeLists.txt
presto-native-execution/presto_cpp/presto_protocol/: presto_protocol.yml
presto-native-execution/presto_cpp/presto_protocol/connector/arrow_flight/: ArrowFlightConnectorProtocol.h  presto_protocol-json-cpp.mustache  presto_protocol-json-hpp.mustache  presto_protocol_arrow_flight.cpp  presto_protocol_arrow_flight.h
presto-native-execution/presto_cpp/presto_protocol/connector/arrow_flight/special/: ArrowColumnHandle.cpp.inc  ArrowColumnHandle.hpp.inc  ArrowTransactionHandle.cpp.inc  ArrowTransactionHandle.hpp.inc
presto-native-execution/presto_cpp/presto_protocol/core/: presto_protocol_core.cpp  presto_protocol_core.yml
presto-native-execution/scripts/: setup-adapters.sh
